fixed navbar spacing

--- a/faang_code/src/components/Navbar/index.css
+++ b/faang_code/src/components/Navbar/index.css
@@ -1,7 +1,7 @@
 .navbar {
     background-color: #4caaf2;
     padding: 20px;
-    width: 159px;
+    width: 189px;
     height: 100vh;  /* take up the full height of the viewport */
     position: fixed;
     top: 0; 
